--- a/horloge.html
+++ b/horloge.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,15 +9,14 @@
     <link rel="icon" href="horloge-background.jpg" />
     <title>Horloge en CSS</title>
 </head>
+
 <body>
     <div class="container">
-        <div class="rond">
-            <div class="centre">
-                <div class="seconde"></div>
-                <div class="minute"></div>
-                <div class="heure"></div>
-            </div>
-        </div>
+        <div class="rond"></div>
+        <div class="seconde"></div>
+        <div class="minute"></div>
+        <div class="heure"></div>
     </div>
 </body>
+
 </html>
