corrected a mistake on html structure, hands are now circle's children

--- a/horloge.html
+++ b/horloge.html
@@ -12,10 +12,11 @@
 
 <body>
     <div class="container">
-        <div class="rond"></div>
-        <div class="seconde"></div>
-        <div class="minute"></div>
-        <div class="heure"></div>
+        <div class="rond">
+            <div class="seconde"></div>
+            <div class="minute"></div>
+            <div class="heure"></div>
+        </div>
     </div>
 </body>
 
