modified html classes by IDs so I can use the style property in javascript. Animation will be done in javascript instead of CSS this time

--- a/horloge.html
+++ b/horloge.html
@@ -13,9 +13,9 @@
 <body>
     <div class="container">
         <div class="rond">
-            <div class="seconde"></div>
-            <div class="minute"></div>
-            <div class="heure"></div>
+            <div id="seconde"></div>
+            <div id="minute"></div>
+            <div id="heure"></div>
         </div>
     </div>
 </body>
