Added numbers in spans and css properties to make them into a circle

--- a/horloge.html
+++ b/horloge.html
@@ -16,9 +16,23 @@
             <div id="seconde"></div>
             <div id="minute"></div>
             <div id="heure"></div>
+            <span class="letter1">1</span>
+            <span class="letter2">2</span>
+            <span class="letter3">3</span>
+            <span class="letter4">4</span>
+            <span class="letter5">5</span>
+            <span class="letter6">6</span>
+            <span class="letter7">7</span>
+            <span class="letter8">8</span>
+            <span class="letter9">9</span>
+            <span class="letter10">10</span>
+            <span class="letter11">11</span>
+            <span class="letter12">12</span>
         </div>
     </div>
+
 </body>
 
 <script src="time.js"></script>
+
 </html>
