opted for a sub element to the span element so I can rotate the letter in the container.

--- a/horloge.html
+++ b/horloge.html
@@ -16,8 +16,8 @@
             <div id="seconde"></div>
             <div id="minute"></div>
             <div id="heure"></div>
-            <span class="letter1">1</span>
-            <span class="letter2">2</span>
+            <span class="letter1"><span>1</span></span>
+            <span class="letter2"><span>2</span></span>
             <span class="letter3">3</span>
             <span class="letter4">4</span>
             <span class="letter5">5</span>
