aligned text of span to center so the existing offset is corrected. Also, it might be better to make the rotate css properties in either JS or SCSS in a loop.

--- a/horloge.html
+++ b/horloge.html
@@ -18,16 +18,16 @@
             <div id="heure"></div>
             <span class="letter1"><span>1</span></span>
             <span class="letter2"><span>2</span></span>
-            <span class="letter3">3</span>
-            <span class="letter4">4</span>
-            <span class="letter5">5</span>
-            <span class="letter6">6</span>
-            <span class="letter7">7</span>
-            <span class="letter8">8</span>
-            <span class="letter9">9</span>
-            <span class="letter10">10</span>
-            <span class="letter11">11</span>
-            <span class="letter12">12</span>
+            <span class="letter3"><span>3</span></span>
+            <span class="letter4"><span>4</span></span>
+            <span class="letter5"><span>5</span></span>
+            <span class="letter6"><span>6</span></span>
+            <span class="letter7"><span>7</span></span>
+            <span class="letter8"><span>8</span></span>
+            <span class="letter9"><span>9</span></span>
+            <span class="letter10"><span>10</span></span>
+            <span class="letter11"><span>11</span></span>
+            <span class="letter12"><span>12</span></span>
         </div>
     </div>
 
